updating chart code, small changes to api_client and views

--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -59,7 +59,7 @@
     var drugNames = 
         [
         {% for results in events_count %}
-        "{{ results.term }}",
+        "{{ results.term }}".toLowerCase(),
         {% endfor %}
     ];
 
