updates to website text

--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -93,9 +93,12 @@
             <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
             <li><a href="{% url 'about' %}#licensing">Licensing Information</a></li>
 		</ul>
-        <p ><strong>Disclaimer:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla,
-            eget malesuada urna justo at ex.</p>
+        <p ><strong>Disclaimer: </strong>Data provided by the U.S. Food and Drug Administration
+            (<a href="https://open.fda.gov">http://open.fda.gov</a>).
+            The material on this website is provided for education only, and is not for clinical or medical use.
+            This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
+
+        <p>&copy; Copyright 2015 Artemis Consulting, Inc.</p>
 	</footer><!-- end footer -->
 
     <script>
