--- a/code/templates/core/about.html
+++ b/code/templates/core/about.html
@@ -6,24 +6,30 @@
 
     <h1 class="page-title">About</h1>
 
-    <p>We know you take your health seriously. Having the latest Drug related
-    information and tools at your fingertips is a critical part of you
+    <p>We know you take your health seriously. Having the latest drug related
+    information and tools at your fingertips is a critical part of your
     overall health and well-being. The information provided by the FDA Drug
     Monitor is the latest and most relevant in our database. Use it along
     with your physicians advice to make informed decisions about the drugs
     you take.</p>
 
     <p>Please note that the information provided here is for reference only and
-    is not intended as medical advice or diagnosis. Always consult with your
-    physician before making drug related decisions.).</p>
+    is not intended as medical advice or diagnosis. Always consult your
+    physician before making drug related decisions.</p>
 
-    <p>For more information regarding your health visit <a href="http://www.fda.gov">www.fda.gov</a></p>
+    <p>For more information regarding the data sources used on this website, visit
+        <a href="http://www.fda.gov">www.fda.gov</a></p>
 
-    <p>This application was designed and build by Artemis Consulting, Inc. For
-    more information visit <a href="http://www.artemisconsultinginc.com">www.artemisconsultinginc.com</a></p>
+    <h2>Source Code</h2>
+    <p>This application was designed and built by Artemis Consulting, Inc.  All source code hosted on github at
+        <a href="https://github.com/artemis-consulting">github.com/artemis-consulting</a>. For
+    more information, please visit
+        <a href="http://www.artemisconsultinginc.com">www.artemisconsultinginc.com</a>.</p>
 
     <h2><a name="anchor1" id="anchor1">Licensing Information</a></h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
+    <p>Copyright 2015 Artemis Consulting, Inc.</p>
+    <p>This website and all source files are made available as part of the <span style="color:red;">TODO-LICENSING</span>.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
         mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
         ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
         ornare quis ornare quis, consequat ut sem. Nullam facilisis interdum augue vel fringilla.</p>
